fix: align icon in link list on baseline

--- a/packages/components-css/src/link-list/index.scss
+++ b/packages/components-css/src/link-list/index.scss
@@ -7,7 +7,9 @@
   align-items: flex-start;
 
   .utrecht-icon {
+    align-self: baseline;
     flex-shrink: 0;
+    position: static;
   }
 }
 
